# grapheditor

./: .eslintrc.json  .gitignore  .npmignore  CHANGELOG.md  LICENSE  README.md  default.nix  package-lock.json  package.json  readthedocs.yml  test.html  tsconfig.json  tslint.json  webpack-dev.config.js  webpack.config.js
docs/: Makefile  Pipfile  README.md  conf.py  coordinates.rst  datatypes.rst  dynamic-templates.rst  edge-path-templates.rst  example.html  grapheditor.rst  groups.rst  index.rst  make.bat  pyproject.toml  quickstart.rst  requirements.txt  resizing.rst  static-templates.rst  typedoc.json
docs/api/: api-index.rst  drop-zone.rst  dynamic-template-registry.rst  dynamic-templates.rst  edge-path-generator-registry.rst  edge-path-generators.rst  edge.rst  grapheditor.rst  grouping.rst  link-handle.rst  marker.rst  node.rst  positioning.rst  rendering-internals.rst  resizing.rst  static-template-registry.rst  text-component.rst  text-wrapping.rst  util.rst
example/: test-automated.html  test-groups-drag-and-drop.html  test-groups.html  test-isolation.html  test-resize.html  test-textwrap-performance.html  test-textwrap.html  test.html
lib/: edge.d.ts  edge.js  edge.js.map  grapheditor.d.ts  grapheditor.js  grapheditor.js.map  index.js  index.js.map  link-handle.d.ts  link-handle.js  link-handle.js.map  marker.d.ts  marker.js  marker.js.map  node.d.ts  node.js.map  object-cache.d.ts  object-cache.js  object-cache.js.map  rotation-vector.d.ts  rotation-vector.js  rotation-vector.js.map  templates.d.ts  templates.js  templates.js.map  textwrap.d.ts  (+2 more)
(+25 files in other folders)
