[tool.poetry]
name = "grapheditor-webcomponent-docs"
version = "0.1.0"
description = ""
authors = ["Fabian Bühler <fabian.buehler@iaas.uni-stuttgart.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = "^6.0.0"
myst-parser = "^2.0.0"
sphinx-rtd-theme = "^1.2.2"
sphinx-js = "^3.2"
tomli = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
